# desk-monorepo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Makefile  README.md  Taskfile.yml  conanfile.py  mypy.ini  pull_request_template.md  pyproject.toml
.github/scripts/: conan-profile.sh
.github/workflows/: cpp-ci.yml  cpp-lint.yml  cpp-linting.yml  cpp-unit-tests.yml  integration-tests.yml  linting.yml  py-linting.yml  py-unit-tests.yml  unit-tests.yml
cmake/: dev-mode.cmake  install-rules.cmake  lint-targets.cmake  lint.cmake  variables.cmake
desk-monorepo/py/util/: test_basic.py
src/backtester/: main.cpp
src/backtester/tst/: test_basic.cpp
src/cppsrc/src/: lib.cpp  main.cpp
src/cppsrc/test/: CMakeLists.txt
src/cppsrc/test/src/: desk_monorepo_test.cpp
src/py/test/: test_basic.py
src/pysrc/: __init__.py  test.py  test_f.py
src/pysrc/adapters/: messages.py
src/pysrc/adapters/kraken/: asset_mappings.py  containers.py  kraken_client.py
src/pysrc/adapters/kraken/future/: containers.py  kraken_future_client.py  kraken_future_websocket_client.py  utils.py
src/pysrc/adapters/kraken/historical/: historical_data_client.py
src/pysrc/adapters/kraken/historical/trades/: historical_trades_data_client.py
src/pysrc/adapters/kraken/historical/updates/: containers.py  historical_updates_data_client.py  utils.py
src/pysrc/adapters/kraken/spot/: containers.py  kraken_client.py
src/pysrc/data_handlers/kraken/historical/: base_data_handler.py  base_handler.py  large_snapshot_data_writer.py  raw_snapshots_handler.py  raw_trades_handler.py  snapshot_stream_writer.py  snapshots_data_handler.py  trades_data_handler.py
src/pysrc/data_loaders/: base_data_loader.py  raw_snapshots_data_loader.py  raw_trades_data_loader.py  tick_snapshots_data_loader.py  tick_trades_data_loader.py
src/pysrc/exec/: action.py
src/pysrc/file_handlers/kraken/historical/: raw_snapshots_handler.py  raw_trades_handler.py
src/pysrc/logger/: logging_config.py
src/pysrc/model/: lasso_container.py
src/pysrc/signal/: base_feature_generator.py  example_feature_generator.py  example_kraken_feature_generator.py
src/pysrc/strategy/: base_strategy.py
src/pysrc/targets/: log_return.py
src/pysrc/test/: feature_eval_helpers.py  helpers.py  lasso_data_helpers.py  test_basic.py
src/pysrc/test/adapters/: kraken_test_public_api.py  test_messages.py
src/pysrc/test/exec/: test_action.py  test_slack_messenger.py
src/pysrc/test/integration/: test_lasso_utils.py  test_websocket_integration.py
src/pysrc/test/integration/adapters/kraken/future/: test_kraken_future_client.py
src/pysrc/test/integration/adapters/kraken/spot/: test_kraken_client.py  test_kraken_spot_client.py
src/pysrc/test/integration/data_loaders/: test_raw_snapshots_data_loader.py  test_raw_trades_data_loader.py  test_tick_snapshots_data_loader.py  test_tick_trades_data_loader.py
src/pysrc/test/integration/data_loaders/resources/trades/XADAZUSD/: 06_25_2024.csv  06_26_2024.csv  06_27_2024.csv  06_28_2024.csv  06_29_2024.csv  06_30_2024.csv  test.csv
src/pysrc/test/integration/kraken/: test_kraken_client.py
src/pysrc/test/integration/model/: test_lasso_container.py
src/pysrc/test/integration/model/resources/: BTC_lasso.pkl  DOGE_lasso.pkl  DOGE_test_data.pkl  ETH_test_data.pkl
src/pysrc/test/integration/resources/: BTC_lasso.pkl  BTC_test_data.pkl  DOGE_lasso.pkl  DOGE_test_data.pkl  ETH_lasso.pkl  sample_data.pkl
src/pysrc/test/integration/util/: test_lasso_utils.py  test_pickle_utils.py  test_slack.py  test_system_slack_conversions.py  test_websocket.py
src/pysrc/test/integration/util/resources/: ETH_lasso.pkl  sample_data.pkl
src/pysrc/test/unit/: test_action.py  test_lasso_utils.py  test_websocket_unit.py
src/pysrc/test/unit/adapters/: test_kraken_conversions.py  test_kraken_public_api.py  test_messages.py
src/pysrc/test/unit/adapters/kraken/: test_kraken_asset_mappings.py
src/pysrc/test/unit/adapters/kraken/future/: test_kraken_containers.py  test_kraken_future_client.py  test_kraken_future_utils.py  test_kraken_future_websocket_client.py
src/pysrc/test/unit/adapters/kraken/historical/: test_historical_data_client.py
src/pysrc/test/unit/adapters/kraken/historical/trades/resources/BONKUSD/: test.csv
src/pysrc/test/unit/adapters/kraken/spot/: test_kraken_client.py
src/pysrc/test/unit/data_handlers/kraken/historical/: test_raw_trades_handler.py  test_snapshots_data_handler.py  test_trades_data_handler.py
src/pysrc/test/unit/exec/: test_action.py
src/pysrc/test/unit/kraken/: test_kraken_asset_mappings.py  test_kraken_client.py
src/pysrc/test/unit/signal/: test_example_feature_generator.py
src/pysrc/test/unit/targets/: test_log_return.py
src/pysrc/test/unit/util/: test_containers.py  test_enum_conversions.py  test_exceptions.py  test_feature_eval.py  test_historical_data_utils.py  test_lasso_utils.py  test_slack_messenger.py  test_slack_utils.py  test_system.py  test_websocket_unit.py
src/pysrc/util/: base_websocket_client.py  conversions.py  enum_conversions.py  exceptions.py  feature_eval.py  hello_test_function.py  historical_data_utils.py  instrument.py  lasso_utils.py  pickle_utils.py  slack_messenger.py  slack_utils.py  system.py  types.py  websocket.py  websocket_handler.py
(+3 files in other folders)
