[tool.poetry]
name = "desk-monorepo"
version = "0.1.0"
description = ""
authors = ["Ethan Havemann <echavemann@gmail.com>"]
readme = "README.md"
packages = [
  {include = "pysrc", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.2"
ruff = "^0.6.5"
pytest = "^8.3.3"
slack-sdk = "^3.33.1"
websockets = "^13.1"
pytest-asyncio = "^0.24.0"
anyio = "^4.6.2.post1"
pytest-tornasync = "^0.6.0.post2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["F401"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
