[tool.poetry]
name = "desk-monorepo"
version = "0.1.0"
description = ""
authors = ["Ethan Havemann <echavemann@gmail.com>"]
readme = "README.md"
packages = [
  {include = "pysrc", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.11.2"
ruff = "^0.6.5"
pytest = "^8.3.3"
slack-sdk = "^3.33.1"
requests = "^2.28.0"
types-requests = "^2.28.0" 
scikit-learn = "^1.5.2"
numpy = "^2.1.2"
pyzstd = "^0.16.2"
types-python-dateutil = "^2.9.0.20241003"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["F401"]
